# spoc-shot

./: .env.example  .gitignore  ARCHITECTURE_REDESIGN.md  BROWSER_CONTROL_POC_ANALYSIS.md  CLAUDE.md  CODE_REVIEW_SUMMARY.md  DRY_REFACTORING_SUMMARY.md  Dockerfile  HACKATHON_PITCH_GUIDE.md  Makefile  README.md  ROADMAP.md  TOOL_CALLING_FIX.md  build_templates.py  config.sh  debug_agent.py  debug_webgpu.html  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  env.example  main.py  package.json  playwright.config.ts  prd.md  pyproject.toml  pytest.ini  run_demo.sh  test_agent_v2.py  test_setup.py  test_tabs.html  webllm_minimal.html  webllm_test.html
agent_v2/: __init__.py
agent_v2/core/: __init__.py  agent.py  tools.py
app/: agent.py  main.py  middleware.py  observability.py  tools.py  verifier.py
app/static/css/: consolidated-variables.css  utility-classes.css  win98.css
app/static/css/components/: race.css  tabs.css  (+2 more)
app/static/js/: analysis.js  app-refactored.js  app.js  confidence-utils.js  config.js  constants.js  dom-utils.js  logit-viz.js  main.js  model-catalog.js  tool-calling-demo.js  ui-components.js  ui.js  utils.js  webllm.js
app/templates/: index.html  index_clean.html  logit-viz.html
app/templates/partials/: control_panel.html  header.html  race_content.html  uncertainty_content.html
tests/: README.md  conftest.py  mock_webllm.py  test_agent.py  test_storyteller_basic.py  test_storyteller_e2e.py  test_storyteller_integration.py  test_storyteller_mocked.py  test_storyteller_with_mocks.py
tests/e2e/: storyteller.spec.ts
(+3 files in other folders)
